Thu Dec 10 20:42:22 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_dest_handle_event): Use 
	gdk_window_get_origin() instead of gdk_window_get_position,
	because get_position is unreliable for plugs. 

	This is a bad hack, maybe we need GDK_WINDOW_PLUG?

Thu Dec 10 17:58:49 GMT 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - re-write the GtkProgressBar section to the 1.1 API.
	  - add an Appendix listing all the signals
	    (apologies to TimJ for taking so long in using his hard work
	     in automating the extraction - thanx Tim). 
	* examples/*: bring them all upto the tutorial versions

Thu Dec 10 02:21:16 1998  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/testdnd.c: use g_snprintf, eliminate need for string.h
	* gtk/testrgb.c: include string.h, for strlen

Wed Dec  9 17:39:26 1998  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add a case for success in 
	test for XUnregisterIMInstantiate, to prevent
	screwing up $LIBS.

Wed Dec  9 13:06:31 1998  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* gdk/gdkim.c (gdk_ic_new,gdk_ic_{set,get}_attr): Fixed argument
 	list and return type for non-XIM fallback.
 
 	* configure.in: Only build XIM-support if available.
 
Wed Dec  9 12:23:30 1998  Owen Taylor  <otaylor@redhat.com>
	
	* gtk/testselection.c (main): Add in missing 'flags'
	field to target list.

	* gdk/gdkproperty.c (gdk_atom_intern): Actually
	add the atoms to the local cache.

Wed Dec  9 04:57:31 PST 1998 Manish Singh <yosh@gimp.org>

	* gdk/gdkprivate.h: put text after #endif in comment

	* gdk/gdktypes.h: change whitespace in enum to shut up makeenums.pl

	* gtk/testdnd.c: #include <string.h>

Mon Dec  7 10:27:09 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c: Destroy widgets _after_ propagating unrealize
	signals through the widget heirarchy. This is unpleasant, as it
	causes more X traffic, but is necessary, because we have to clean
	up our Input Contexts before destroying the X windows.